# opengl_template

./: CMakeLists.txt  README.md  main.cpp
